# ZLabel

./: .gitignore  README.md  build.py  build_nuitka.py  icons_rc.py  main.py  pyproject.toml  uic_rcc.py  version_info.txt  version_info.yml  zlabel.py
tests/: test_zworker.py
zlabel/: __init__.py  main.py
zlabel/models/: lru_cache.py  sam_onnx.py  types.py
zlabel/resources/: icons.qrc  icons_rc.py
zlabel/resources/ui/: dialog_about.ui  dialog_category_choice.ui  dialog_connect_api.ui  dialog_create_project.ui  dialog_export.ui  dialog_import.ui  dialog_model_manager.ui  dialog_new_proj.ui  dialog_processing.ui  dialog_settings.ui  dialog_shortcuts.ui  dock_anno.ui  dock_file.ui  dock_info.ui  dock_label.ui  mainwindow.ui  mainwindow_ui.py
zlabel/utils/: __init__.py  api_helper.py  enums.py  logger.py  project.py
zlabel/widgets/: __init__.py  canvas.py  dialog_about.py  dialog_new_proj.py  dialog_processing.py  dialog_settings.py  dock_anno.py  dock_file.py  dock_info.py  dock_label.py  graphic_objects.py  mainwindow.py  switch_button.py  tmp_model.py  zsettings.py  zthread.py  zundostack.py  zwidgets.py  zworker.py
zlabel/widgets/ui/: __init__.py  dialog_about.py  dialog_category_choice.py  dialog_export.py  dialog_import.py  dialog_model_manager.py  dialog_new_proj.py  dialog_processing.py  dialog_settings.py  dialog_shortcuts.py  dock_anno.py  dock_file.py  dock_info.py  dock_label.py  mainwindow.py
