[project]
name = "ZLabel"
version = "0.1.6"
description = ""
authors = [{ name = "rainyl", email = "rainyliusy3@gmail.com" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "Pillow<11.0.0,>=10.1.0",
    "pyside6<7.0.0,>=6.6.1",
    "rich<14.0.0,>=13.7.0",
    "pydantic<3.0.0,>=2.5.2",
    "requests<3.0.0,>=2.31.0",
    "pyqtgraph<1.0.0,>=0.13.3",
    "numpy>=2.2.6",
]

[dependency-groups]
dev = [
    "PyYAML<7.0.0,>=6.0.1",
    "black>=25.1.0",
    "pyinstaller-versionfile>=2.1.1,<3.0.0",
    "nuitka>=2.7.2",
    "py7zr>=1.0.0",
    "pytest>=8.4.2",
    "poethepoet>=0.37.0",
    "typed-argument-parser>=1.11.0",
    "pyinstaller<7.0.0,>=6.3.0",
    "tqdm>=4.67.1",
    "imageio>=2.37.0",
]

[tool.pyright]
defineConstant = { PYQT5 = false, PYSIDE6 = true, PYSIDE2 = false, PYQT6 = false }

[[tool.uv.index]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[tool.ruff]
line-length = 120
# Enable preview features.
preview = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
    "B905",
    "E712",
    "UP015",
]

[tool.mypy]
exclude = ["^zlabel/widgets/ui/", "^zlabel/models/", "^tests/", "^dist/", "^build/"]
disable_error_code = ["import-untyped"]
check_untyped_defs = true

[tool.poe.tasks]
run = "python ./main.py"
build = """python ./build.py"""
build_nuitka = """python -m nuitka --standalone --deployment --enable-plugin=pyside6 --include-qt-plugins=sensible --macos-create-app --macos-app-name=ZLabel --macos-app-icon=zlabel/resources/icons/zlabel.png --windows-console-mode=force --windows-icon-from-ico=zlabel/resources/icons/zlabel.png --linux-icon=zlabel/resources/icons/zlabel.png --output-dir=build/nuitka zlabel.py"""

designer = "pyside6-designer.exe"
designer_macos = "open .venv/lib/python3.10/site-packages/PySide6/Designer.app"
uic_rcc = "python ./uic_rcc.py"
